Closed Bug 591431 Opened 15 years ago Closed 15 years ago

Reflect.parse(): JSOP_*XMLNAME nodes as lvalues

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dherman, Assigned: dherman)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

js> Reflect.parse("x::y = foo") Assertion failure: op > UNOP_ERR && op < UNOP_LIMIT, at ../jsreflect.cpp:2160 Segmentation fault
Attachment #469963 - Flags: review?(cdleary)
Comment on attachment 469963 [details] [diff] [review] TOK_UNARY cases include JSOP_SETXMLNAME and JSOP_BINDXMLNAME Straightforward and nice test coverage -- that's the best kind of patch!
Attachment #469963 - Flags: review?(cdleary) → review+
Whiteboard: fixed-in-tracemonkey
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: