bug 591431, r=cdleary: Reflect.parse(): JSOP_*XMLNAME nodes as lvalues